# QuanQuan

./: .gitignore  CMakeLists.txt  README.md  applemsgbox.cpp  applemsgbox.h  dbmanager.cpp  dbmanager.h  fake_git.ps1  init_db.sql  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  style.qss
